# fastapi-redis-tutorial

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tox.ini
aioredis/: .coveragerc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
aioredis/tests/: conftest.py  test_bitcoin_api.py
aioredis/tests/fixtures/: sentiment_response.json
app/: application.py  config.py  main.py
redis/: pyproject.toml
redis/app/: app.py
tests/: conftest.py  test_bitcoin_api.py  test_speedtest.py
tests/endpoints/: hello_test.py
