[tool.poetry]
name = "fastapi-starter-template"
version = "0.1.0"
description = ""
authors = ["Zidane Wright <zidanewright@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "2.0.0a1"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
requests = "^2.24.0"
aiotestspeed = {git = "https://github.com/abrookins/aiotestspeed", rev = "master"}
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"
tox = "^3.19.0"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
