[tool.poetry]
name = "fastapi-starter-template"
version = "0.1.0"
description = ""
authors = ["Andrew Brookins <andrew.brookins@redislabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
uvicorn = "0.14.0"
requests = "^2.24.0"
asgi-lifespan = "^1.0.1"
python-dateutil = "^2.8.1"
httpx = "^0.18.2"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"
tox = "^3.19.0"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.1"
ipdb = "^0.13.9"
yapf = "^0.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
